# emotion

./: .gitignore  CMakeLists.txt  JoyNeutral.json  __main__.py  package.xml
launch/: bringup.launch
src/: __main__.py  actionlookup.csv  lookup.csv  processor.py
src/node/: ros_to_http.py
src/server/: app.py  media_queue.py  wsgi_server.py
src/server/static/js/: EmotionController.js  lottie.js  script.js  workspace.code-workspace
src/server/templates/: NeutralJoy.json  index.html
